[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_visualization"
version = "0.1.0"
description = "A Python package for robot visualization using URDF files and PyVista"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["robotics", "visualization", "urdf", "pyvista", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Robotics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "pyvista",
    "scipy",
    "lxml",
    "networkx>=3.0",
    "pillow",
    "pycollada==0.6",
    "pyrender>=0.1.20",
    "six",
    "trimesh",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/yourusername/robot_visualization"
Documentation = "https://github.com/yourusername/robot_visualization#readme"
Repository = "https://github.com/yourusername/robot_visualization.git"
"Bug Tracker" = "https://github.com/yourusername/robot_visualization/issues"

[tool.setuptools.packages.find]
include = ["robot_visualization*", "urdfpy*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
