[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_visualization"
version = "0.2.0"
description = "PyVista-based 3D visualization of URDF robots"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Maximilian Dio", email = "maximilian.dio@fau.de" }]
keywords = ["robotics", "visualization", "urdf", "pyvista", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24",
    "pyvista>=0.40",
    "scipy>=1.13",
    "opencv-python",
    # urdfpy (vendored as the ./urdfpy submodule) dependencies
    "lxml",
    "networkx>=3.0",
    "pillow",
    "pycollada==0.6",
    "pyrender>=0.1.20",
    "six",
    "trimesh>=3.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]

[project.urls]
Repository = "https://github.com/MaximilianDio/robot_visualization.git"

# This repository ships two import packages: robot_visualization itself and a
# vendored fork of urdfpy (git submodule, see .gitmodules). Installing this
# project therefore also installs urdfpy - no separate install required.
[tool.setuptools]
packages = ["robot_visualization", "urdfpy"]

[tool.setuptools.package-dir]
robot_visualization = "robot_visualization"
urdfpy = "urdfpy/urdfpy"
